--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
-    "core-js": "^3.7.0"
+    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-typescript": "^7.12.1",
+    "babel-loader": "^8.2.1",
+    "core-js": "^3.7.0",
+    "html-webpack-plugin": "^4.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
